--- a/alemneh/index.html
+++ b/alemneh/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body ng-init="name = 'Alem'">
-    {{name}}
-    <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
+  <body ng-init="person = {name:'Alem', age:32, sex:'F'}">
+    <h1>Members:</h1>
+    Name: {{person.name}}<br>
+    Age: {{person.age}}<br>
+    Sex: {{person.sex}}
+    <script type="text/javascript" src="./bundle.js" charset="utf-8"></script>
       <script type="text/javascript" src="./bower_components/angular/angular.js" charset="utf-8"></script>
   </body>
 </html>
